# fastgps

./: .gitignore  404.html  README.md  ags.md  conda_env.yml  example.py  example_multitask.py  example_vec.py  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  doctests.yml  tests.yml
api/: index.html
docs/: api.md  index.md
docs/examples/: advection_muq.ipynb
docs/examples/batch_multitask/: fgp_dnb2.ipynb  fgp_lattice.ipynb  standard_gp.ipynb
docs/examples/derivative_informed/: compare_fgp_dnb2_lattice_plot.ipynb  compare_gps_plot.ipynb  fgp_dnb2.ipynb  fgp_lattice.ipynb  standard_gp.ipynb
docs/examples/misc/: kiss_gp_dnets.ipynb
docs/examples/mlqmc/: comparison.ipynb  visual.ipynb
docs/examples/multitask/: compare_1d_gps_plot.ipynb  compare_2d_gps_plot.ipynb  compare_fgp_dnb2_lattice_plot.ipynb  compare_gps_plot.ipynb  elliptic_pde.ipynb  fgp_dnb2.ipynb  fgp_lattice.ipynb  standard_gp.ipynb
docs/examples/multitask_batch/: fgp_dnb2.ipynb
docs/examples/papers/fmtgps/: MTGP_1024_x2_train.csv  MTGP_1024_x_test.csv  MTGP_1024_y0_train.csv  MTGP_1024_y_test.csv  MTGP_1024_y_train.csv  MTGP_256_x1_test.csv  MTGP_y_1.csv  (+6 more)
docs/examples/probnum25_paper/: .gitignore  benchmarks_accuracy_time.tex  benchmarks_mll.tex  probnum25_paper.ipynb
docs/examples/qmc_inducing_points/: qmc_data_compression.ipynb
docs/examples/simple/: compare_gps_plot.ipynb  fgp_dnb2.ipynb  fgp_lattice.ipynb  periodization.ipynb  standard_gp.ipynb
docs/examples/standard/: compare_fgp_dnb2_lattice_plot.ipynb  compare_gps_plot.ipynb  fgp_dnb2.ipynb  fgp_lattice.ipynb
examples/batch_multitask/fgp_dnb2/: fgp_dnb2.ipynb  index.html
examples/batch_multitask/fgp_lattice/: fgp_lattice.ipynb  index.html
examples/batch_multitask/standard_gp/: index.html  standard_gp.ipynb
examples/derivative_informed/compare_gps_plot/: index.html
examples/derivative_informed/fgp_dnb2/: index.html
examples/derivative_informed/fgp_lattice/: fgp_lattice.ipynb  index.html
examples/derivative_informed/standard_gp/: index.html  standard_gp.ipynb
examples/misc/kiss_gp_dnets/: index.html  kiss_gp_dnets.ipynb
examples/misc/periodization/: index.html
examples/misc/random_fourier_features/: index.html  random_fourier_features.ipynb
examples/mlqmc/comparison/: index.html
examples/mlqmc/visual/: index.html  visual.ipynb
examples/multitask/compare_1d_gps_plot/: compare_1d_gps_plot.ipynb  index.html
examples/multitask/compare_2d_gps_plot/: compare_2d_gps_plot.ipynb  index.html
examples/multitask/compare_gps_plot/: index.html
examples/multitask/elliptic_pde/: elliptic_pde.ipynb  index.html
examples/multitask/fgp_dnb2/: index.html
examples/multitask/fgp_lattice/: fgp_lattice.ipynb  index.html
examples/multitask/standard_gp/: index.html  standard_gp.ipynb
examples/papers/fmtgps/: MTGP_1024_x0_train.csv  MTGP_1024_x1_train.csv  MTGP_1024_x_train.csv  MTGP_256_x0_test.csv  MTGP_256_y2_test.csv
examples/probnum25_paper/probnum25_paper/: index.html
examples/simple/compare_gps_plot/: index.html
examples/simple/fgp_dnb2/: fgp_dnb2.ipynb  index.html
examples/simple/fgp_lattice/: fgp_lattice.ipynb  index.html
examples/simple/standard_gp/: index.html  standard_gp.ipynb
fastgp/: __init__.py  _fast_gp.py  abstract_fast_gp.py  abstract_gp.py  fast_gp.py  fast_gp_digital_net_b2.py  fast_gp_lattice.py  fgp.py  standard_gp.py  util.py
fastgp/fast_gp/: _fast_gp.py  fast_gp_digital_net_b2.py
fastgp/fast_mt_gp/: __init__.py  _fast_mt_gp.py  fast_mt_gp_digital_net_b2.py  fast_mt_gp_lattice.py
fastgps/: __init__.py  abstract_fast_gp.py  abstract_gp.py  fast_gp_digital_net_b2.py  fast_gp_lattice.py  plots.py  prior_means.py  standard_gp.py  util.py
search/: search_index.json
(+4 files in other folders)
