[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[project]
name = "fastgps"
dynamic = ["version"]
description = "Fast Gaussian processes regression in O(n log n)"
requires-python = ">=3.7"
dependencies = [
    "qmcpy >= 1.6.2.1",
    "torch >= 2.0.0",
    "numpy >= 1.17.0",
    "scipy >= 1.13.0",
]
authors = [
  {name = "Aleksei G Sorokin", email = "agsorokin3@gmail.com"},
]
readme = "README.md"
license = "MIT"
keywords = [
        "fast",
        "Gaussian",
        "process",
        "regression",
        "low discrepancy",
        "quasi-random",
        "lattice",
        "digital net",
        "shift invariant",
        "digitally shift invariant",
    ]

[project.urls]
Homepage = "https://alegresor.github.io/FastGaussianProcesses/"
Documentation = "https://alegresor.github.io/FastGaussianProcesses/"
Repository = "https://github.com/alegresor/FastGaussianProcesses"
Issues = "https://github.com/alegresor/FastGaussianProcesses/issues"

[project.optional-dependencies]
dev = [
    "pytest >= 8.0.0",
    "nbval >= 0.10.0",
    "jupyterlab >= 4.0.0",
]
